Minor backend changes
